# thyla-trees

./: .gitignore  Cargo.toml  readme.md
circuit/: Prover.toml  Verifier.toml
circuit/src/: main.nr  reactor.nr
circuit/src/reactor/: helpers.nr  message.nr
circuits/experiments/src/: reactor.nr
circuits/merkleproofs/src/: main.nr
deprecated-circuits/experiments/: Prover.toml
deprecated-circuits/experiments/src/: main.nr
deprecated-circuits/merkleproofs/: Nargo.toml
deprecated-circuits/merkleproofs/src/: main.nr
merke-tree/src/: main.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: config.rs  example.rs  experiment.rs  full.rs  gptv.rs  helpers.rs  kairos_v0.rs  lib.rs  main.rs  optimized.rs  patricia.rs  tornado.rs  tracking.rs
message-cli/: Cargo.toml  rust-toolchain.toml
message-cli/circuits/rollup/src/: main.nr
message-cli/circuits/secp256k1/: Nargo.toml
message-cli/circuits/secp256k1/src/: main.nr
message-cli/src/: main.rs  prover.rs
message-cli/src/prover/: lib.rs  merkle_prover.rs  sig_prover.rs
python/: inputs.py  keypair.pem
rollup-node/: Cargo.toml
rollup-node/circuits/rollup/src/: helpers.nr  main.nr
sig_verifier/: Nargo.toml
sig_verifier/src/: main.nr
