[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256={version="1.4.0", default-features=false}
uint = {version="0.9.0", default-features=false}
sha2 = {version="0.10.0", default-features=false}
digest = {version="0.10.0", default-features=false}